--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Alpha4 
	- Fixed a bug with Random Play if you had no artists/albums/playlists
	- Fixed Admin's ability to modify other users preferences
	- Added User and Manager levels to Localplay, determines what the
		user in question can do
	- Moved Newest * to statistics page
	- Database Update, removed useless config options and tweaked a few others
	- Fixed last of the missing MPD functionality (Volume & Playlist Clear)
	- Fixed HTTPQ and improved parsing for urls from MPD & HTTPQ
		they now reconize Democratic Playlists
	- Added paging to genre sub-pages
	- Added missing song data fields to single song view
	- Fixed display issue with playlists when deleting a song
	- Fixed sorting of 'add to Playlist' menu on rightbar
	- Added another layer of checking on catalog deletes to help 
		prevent orphaned elements
	- Fixed lack of prefix on Albums, improves album art search 
		results (Thx darkside)
	- Fixed problem with invalid urls populated to localplay methods
		under certin conditions
	- Fixed Album Art dump bin script 
	- Added paging to the Playlist Song view
	- Fixed error on catalog Update All 
	- Fixed Public registration page, and simplified logic
	- Added 'Add' button to recently played
	- Limited Rightbar to only 100 items, adds last row indicating any
		additional items on playlist. Prevents Firefox crash if you
		add many thousands of items to a single active playlist
	- Corrected Sorting of Democratic Play votes, sort order is now 
		# of votes then oldest vote first so new votes sort to
		the bottom
	- Fixed sending URLs directly to MPD
	- Fixed a problem with automatic downsampling which was referencing
		a now non-existant function 