@@ -92,6 +92,11 @@ function reload_util(target) {
 	document.getElementById('util_iframe').src = document.getElementById('util_iframe').src;
 } 
 
+// Log them out
+function reload_logout(target) { 
+	window.location = target;
+}
+
 function popup_art(url) {
         var newwindow;
         newwindow=window.open(url, "ampache_art", "menubar=no,toolbar=no,location=no,directories=no");
